# uepg-garden-lowcost-iot-ml

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: firmware.yml
ai/: README.txt
ai/inference/: 03_flask_inference_server.py
ai/model_training/: 01_dataset_augmentation.py  02_leaf_segmentation_feature_training.py
docs/: api.md  architecture.md  firmware.md  ml.md
firmware/: README.md
firmware/smart-tomato-garden/: ci.json  partitions.csv  platformio.ini  smart-tomato-garden.ino
firmware/smart-tomato-garden/.githooks/: pre-commit
firmware/smart-tomato-garden/docs/: PROCESS.md
firmware/smart-tomato-garden/include/: camera_index.h  camera_pins.h  camera_server.h  config.h  hash_dispatch.h  inference_client.h  irrigation.h  logger.h  metrics.h  networking.h  sensors.h  storage.h
firmware/smart-tomato-garden/src/: camera_server.cpp  config.cpp  inference_client.cpp  logger.cpp  (+6 more)
ml/: Dockerfile  README.md  pyproject.toml
ml/scripts/: augment_dataset.py  evaluate_model.py  serve_api.py  train_deep_baseline.py  train_model.py
ml/src/garden_ml/config/: constants.py  settings.py
ml/src/garden_ml/features/: components.py  extract.py  schema.py
ml/src/garden_ml/image/: photometric.py  resize.py  segmentation.py
ml/src/garden_ml/inference/: api_flask.py  predictor.py  serializers.py  storage.py
ml/src/garden_ml/training/: augment.py  deep_baseline.py  evaluate.py  train.py
ml/tests/: test_extract_102.py  test_feature_schema.py  test_predictor.py
smart-tomato-garden/: smart-tomato-garden.ino
tools/firmware/: README.md
(+27 files in other folders)
